add the sequential config field

--- a/commands.yaml
+++ b/commands.yaml
@@ -1,7 +1,16 @@
 write:
   - pattern: "**/*.go"
     commands:
-     - echo "write event"
+      - echo "1"
+      - echo "2"
+      - echo "3"
+      - echo "4"
+      - echo "5"
+      - echo "6"
+      - echo "7"
+#     - go build -o exec ./...
+#     - ./exec
+    sequential: true
 rename:
   - pattern: "*"
     commands:
