add timeout config

--- a/commands.yaml
+++ b/commands.yaml
@@ -3,14 +3,14 @@ write:
     commands:
       - echo "1"
       - echo "2"
-      - echo "3"
-      - echo "4"
-      - echo "5"
-      - echo "6"
-      - echo "7"
 #     - go build -o exec ./...
 #     - ./exec
     sequential: true
+    on_success:
+      - echo "commands are executed successfully"
+    on_failure:
+      - echo "commands failed to execute successfully"
+    timeout: "1s"
 rename:
   - pattern: "*"
     commands:
